--- a/package.json
+++ b/package.json
@@ -16,17 +16,15 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "clientjs": "^0.2.1",
     "clsx": "^1.2.1",
-    "eslint": "8.27.0",
+    "eslint": "^8.40.0",
     "eslint-config-next": "13.0.3",
-    "get-browser-fingerprint": "^2.1.1",
     "konva": "^8.3.14",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-konva": "^18.2.3",
-    "socket.io": "^4.5.4",
+    "socket.io": "4.6.0",
     "socket.io-client": "^4.5.4",
     "typescript": "4.9.3"
   },
